# command-rpc

./: Cargo.toml  README.md  build.rs  crpc_function.rs  run.ps  transcript.md
_old2/crpc-mark-macro/: Cargo.toml
_old2/crpc/src/: builder.rs  crpc.rs
_old2/traverse/: Cargo.toml
checks/: Cargo.toml
checks/src/: lib.rs
command-rpc/: Cargo.toml
command-rpc/crpc/: Cargo.toml
command-rpc/crpc-mark-macro/: Cargo.toml
crpc/: Cargo.toml
crpc-mark-macro/: Cargo.toml
crpc-mark-macro/src/: lib.rs
gen_test/comment_macro/: Cargo.toml
gen_test/comment_macro/src/: lib.rs
gen_test/testcrate/: Cargo.toml
gen_test/testcrate/src/: main.rs
mk_cli/: Cargo.toml
mk_cli/src/: build.rs  checks.rs  lib.rs  tests.rs
pages/: index.html
rustflix_rebuild/: Cargo.toml
rustflix_rebuild/src/: analogy_result.rs  analogy_typed.rs  args.rs  main.rs
src/: build.rs  build_command.rs  build_nested.rs  builder.rs  checks.rs  crpc_function.rs  fnc.rs  gpt.rs  lib.rs  match_expanded_test.rs  new.rs  process_attr.rs  return_token.rs  stuff.rs
traverse/: Cargo.toml
traverse/src/: lib.rs
