[package]
name = "command-rpc"
version = "0.1.10"
edition = "2021"
description = "This is a rpc service which is not ready yet but needs to be published because of testing purposes."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# my_workspace/Cargo.toml

[lib]
name = "command_rpc"
# crate-type = ["dylib"]
proc_macro = true
path = "src/lib.rs"

[feature]
callback = []

# [workspace]
# members = [
#     "crpc",
#     "crpc-mark-macro",
#     "traverse",
# ]

[dependencies]
syn = { version = "2.0.15", features = ["full"] }
quote = "1.0.26"
# crpc = { version = "*", git = "https://github.com/la-fourier/command_rpc/tree/main/crpc" }
# crpc-mark-macro = { version = "*", git = "https://github.com/la-fourier/command_rpc/tree/main/crpc-mark-macro" }
# traverse = { version = "*", git = "https://github.com/la-fourier/command_rpc/tree/main/traverse" }