[package]
name = "command-rpc"
version = "0.1.12"
edition = "2021"
description = "This is a cli crate and api for replacing rpc."
license = "MIT OR Apache-2.0"
repository = "https://github.com/la-fourier/command_rpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "command_rpc"
proc_macro = true
path = "./src/lib.rs"

[dependencies]
# clap = { version = "2.0.64", features = ["derive"], optional = true } # TODO specify this to a several version - does the user have to import on his own?
syn = { version = "2.0.65", features = ["full", "parsing", "printing", "extra-traits"] }
quote = "1.0.36"
