[package]
name = "checks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"], optional = true } # TODO specify this to a several version
syn = { version = "2.0.15", features = ["full", "parsing", "printing"] }
quote = "1.0.26"
regex = "1.5"