[package]
name = "crpc-mark-macro"
version = "0.1.0"
edition = "2021"

[lib]
name = "crpc_mark_macro"
crate-type = ["proc-macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }