[package]
name = "crpc-mark-macro"
version = "0.1.0"
edition = "2021"

[lib]
name = "crpc_mark_macro"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.15", features = ["full"] }
quote = "1.0.26"