[package]
name = "comment_macro"
version = "0.1.0"
edition = "2021"

[lib]
name = "command_rpc"
# crate-type = ["dylib"]
proc_macro = true
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.15", features = ["full"] } #, "parsing", "printing"] }
quote = "1.0.26"